--- a/MLRevision.ipynb
+++ b/MLRevision.ipynb
@@ -6,7 +6,7 @@
       "name": "MLRevision.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP1vwW9evo8bcMzYFqNd7bu",
+      "authorship_tag": "ABX9TyPrgqxWeexSPL7NJIy2ytev",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1499,7 +1499,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Hyperparameter**"
+        "## Hypertuning"
       ],
       "metadata": {
         "id": "3QfT7aiKfDwP"
@@ -1537,6 +1537,20 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Pruning\n",
+        "\n",
+        "It is the process of removal of selected part of a plant.\n",
+        "\n",
+        "Pre-Pruning: First, we'll decide our hyper-parameters and then grow the tree.\n",
+        "Post-Pruning: we'll grow the tree and cut the branches later."
+      ],
+      "metadata": {
+        "id": "byJwMzX7IaYL"
+      }
     },
     {
       "cell_type": "code",
